add frontend & gateway CI_2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -150,5 +150,5 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на Docker 
+          # Тут вместо username должен быть ваш логин на Dock 
           tags: grosseluchs/taski_gateway:latest
